duck/test/fail/ambiguous1.duck
main = testAll

f :: Int -> a -> Int
f x y = 0

f :: a -> Int -> Int
f x y = 0

_ = f 0 0
